--- a/medial-queries1/index.html
+++ b/medial-queries1/index.html
@@ -7,9 +7,11 @@
   </head>
   <body>
     <div class="container">
-      <div class="a"></div>
-      <div class="b"></div>
-      <div class="c"></div>
+      <header class="a">a</header>
+      <div class="container-2">
+      <main class="b">b</main>
+      <footer class="c">c</footer>
+      </div>
     </div>
   </body>
 </html>
