--- a/medial-queries2/index.html
+++ b/medial-queries2/index.html
@@ -7,12 +7,25 @@
   </head>
   <body>
     <div class="container">
-      <div class="a">a</div>
-      <div class="b">b</div>
+      <header>
+        <div class="a">
+          a
+        </div>
+      </header>
+      
+        <div class="wrapper">
+        <main class="b">
+          b
+        </main>
+        <section>
       <div class="c">c</div>
       <div class="d">d</div>
       <div class="e">e</div>
-      <div class="f">f</div>
+        </section>
+        
+      <footer class="f">
+        f
+      </footer>
     </div>
   </body>
 </html>
