--- a/medial-queries3/index.html
+++ b/medial-queries3/index.html
@@ -7,19 +7,22 @@
   </head>
   <body>
     <div class="container">
-      <header class="a">
+      <header class="b">
         a
       </header>
       <div class="wrapper">
-      <aside>
-      <div class="b">b</div>
-      <div class="c">c</div>
-      <div class="d">d</div>
-      <div class="e">e</div>
-      <div class="f">f</div>
-      <div class="g">g</div>
-      </aside>
-      <footer class="h">h</footer>
+        <aside>
+          <div class="b">b</div>
+          <div class="c">c</div>
+          <div class="d">d</div>
+          <div class="e">e</div>
+          <div class="f">f</div>
+          <div class="g">g</div>
+        </aside>
+        <main class="h">
+          h
+        </main>
+      </div>
     </div>
   </body>
 </html>
